# TIG

./: .gitignore  CMakeLists.txt  README.md  man
include/: TIG_cli.h  TIG_srv.h  copy_directory.h  daemon.h  get_time.h  mcast_discover.h  mcast_respond.h  print_file.h  recv_directory.h  recv_file.h  send_directory.h  send_file.h
src/: TIG_cli.c  TIG_srv.c  cli  copy_directory.c  daemon.c  get_time.c  mcast_discover.c  mcast_respond.c  print_file.c  recv_directory.c  recv_file.c  send_directory.c  send_file.c  srv
srv/data/: list
srv/data/commits/: chat  pliczek
